# rsomics-bed-multicov

./: Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: expected.tsv  regions.bed  test.bam  test.bam.bai  test.sam
