[package]
name = "rsomics-bed-multicov"
version = "0.1.0"
description = "Count reads from multiple BAM files overlapping BED intervals — bedtools multicov equivalent"
edition = "2024"
rust-version = "1.91"
license = "MIT OR Apache-2.0"
repository = "https://github.com/omics-rust/rsomics-bed-multicov"
authors = ["Zane Leong <efd@live.com>"]
categories = ["science", "command-line-utilities"]
keywords = ["multicov", "bedtools", "bam", "bioinformatics", "genomics"]
readme = "README.md"

[[bin]]
name = "rsomics-bed-multicov"
path = "src/main.rs"

[lib]
name = "rsomics_bed_multicov"
path = "src/lib.rs"
doctest = false

[dependencies]
rsomics-common = { version = "0.6" }
rsomics-help = { version = "0.3" }
rsomics-bamio = { version = "0.1" }
clap = { version = "4", features = ["derive"] }
itoa = "1"
noodles = { version = "0.110", features = ["core", "sam", "bam"] }
noodles-bgzf = { version = "0.47", features = ["libdeflate"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["cargo_bench_support"] }
tempfile = "3"

[[bench]]
name = "bench"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
uninlined_format_args = "allow"
